--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,54 @@
 .App {
   text-align: center;
+  align-content: center;
+  height: 100%;
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
+  animation: spinner infinite 2s linear;
   height: 40vmin;
+  margin-top: 20%;
 }
 
 .App-header {
   background-color: #282c34;
-  min-height: 100vh;
+  max-height: 60vh;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  /* overflow: hidden; */
 }
 
 .App-link {
   color: #61dafb;
 }
 
+.content {
+  display: flex;
+  width: 100%;
+  overflow: visible;
+  height: 100vh;
+}
+
 @keyframes App-logo-spin {
   from {
-    transform: rotate(0deg);
+    transform: rotate(-10deg);
   }
   to {
     transform: rotate(360deg);
+  }
+}
+
+@keyframes spinner {
+  from {
+    -moz-transform: rotateY(0deg);
+    -ms-transform: rotateY(0deg);
+    transform: rotateY(0deg);
+  }
+  to {
+    -moz-transform: rotateY(-360deg);
+    -ms-transform: rotateY(-360deg);
+    transform: rotateY(-360deg);
   }
 }
